# spell

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile  HANDOFF.md  HANDOFF_PHASE2.md  Makefile  PLANS.md  README.md  fly.toml  test_cast.sh  test_rate_limit.sh
.github/: release-drafter.yml
.github/workflows/: ci.yml  deploy.yml  monthly-billing.yml
.sqlx/: query-08ca22b03f1d2de1a33c480582efe3e0f0dbe8a451e70b3febdd4adade486b58.json  query-4a3e300e337d698c475b60b64f83635021fdbba217d688f94dbda63a5159357d.json  query-6b8018f017bb1f224c0859ba1b261e9b4b7a4e43aee8d766809a7308b0443d75.json  query-843033892855537d72702d21071422d2d2204f45d58be3f20befc6c7559c79d5.json  query-ac4e63e5e3fc3f06068f75abee0e58f5e26a1d94c132f34d11ccb5a24e029c7c.json  query-f87fa2f4398de369872a8220f9886b256fef3f9f51c87406b736922b08c2f23f.json
cloudflare-proxy/: README.md  package-lock.json  package.json  wrangler.toml
cloudflare-proxy/src/: index.ts
db/: 0006_split_stripe_customer_ids.sql
docs/: BILLING.md
docs/spec/: Spell-Platform_v1.4.0.md
frontend/: .lighthouserc.js  CSP_HARDENING.md  DEPLOYMENT.md  MONITORING.md  OAUTH_SETUP.md  README.md  next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
frontend/components/: BudgetManager.tsx  CardSetupForm.tsx  Providers.tsx  UsageDisplay.tsx
frontend/lib/: apiKeys.ts  auth.ts  budget.ts  usage.ts
migrations/: 0001_init.sql  0002_users.sql  0003_api_keys.sql  0004_billing.sql  0005_payment_methods.sql  0006_spells.sql
ops/: 72H_HARDENING_SUMMARY.md  INCIDENT_RESPONSE.md
scripts/: apply_migrations.sh  e2e_phase2.sh  generate_sbom.sh  run_monthly_billing.sh  sign_artifacts.sh
src/: db.rs  errors.rs  main.rs  wasm.rs
src/middleware/: auth.rs  rate_limit.rs
src/models/: mod.rs  (+4 more)
tests/: api_key_tests.rs  auth_tests.rs  budget_tests.rs  integration_tests.rs
(+41 files in other folders)
