[package]
name = "spell-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "chrono"] }
tokio = { version = "1", features = ["full"] }
wasmtime = "17"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web-httpauth = "0.8"
base64 = "0.21"
rand = "0.8"
argon2 = "0.5"
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.15"
futures = "0.3"
async-stripe = { version = "0.37", features = ["runtime-tokio-hyper-rustls", "webhook-events", "checkout"] }
prometheus = "0.13"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"

[dev-dependencies]
actix-rt = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
